fixes problem with data losing at modal card. Changes create board modal to reduce chances of flickering. Adds current password comprobation for change password. Fixes styles in general.

--- a/src/styles/components/addCollaboratorsModal.scss
+++ b/src/styles/components/addCollaboratorsModal.scss
@@ -25,6 +25,7 @@
 
 .modal__addCollaborators__header{
   position: relative;
+
   .button {
     background-color: var(--ds-surface-raised,#f4f5f7);
     color: var(--ds-icon,#42526e);
@@ -32,7 +33,7 @@
     overflow: hidden;
     padding: 4px;
     position: absolute;
-    transition: background-color 85ms,color 85ms;
+    border-radius: 50%;
     width: 32px;
     font-family: Helvetica Neue,sans-serif;
     font-size: 20px;
@@ -43,13 +44,14 @@
     margin-bottom: 5px;
     cursor: pointer;
   }
+
   .button:hover{
     background-color: var(--ds-background-neutral-hovered,#091e4240);
     color: var(--ds-icon,#42526e);
     outline: 0;
-    border-radius: 50%;
-
+    transition-duration: 0.8s;
   }
+
   .title {
     text-align: center;
   }
