--- a/src/styles/components/modalCard.scss
+++ b/src/styles/components/modalCard.scss
@@ -43,17 +43,18 @@
     position: absolute;
     right: 0;
     top: 0;
-    transition: background-color 85ms,color 85ms;
+    border-radius: 50%;
     width: 32px;
     font-family: Helvetica Neue,sans-serif;
     font-size: 20px;
     margin-left: 300px;
+    cursor: pointer;
 
     &:hover {
       background-color: var(--ds-background-neutral-hovered,#091e4240);
       color: var(--ds-icon,#42526e);
       outline: 0;
-      border-radius: 50%;
+      transition-duration: 0.8s;
     }
   }
 
@@ -266,16 +267,15 @@
       box-shadow: none;
       box-sizing: border-box;
       cursor: pointer;
-      display: block;
       height: 32px;
       margin-top: 8px;
       max-width: 300px;
+      margin-left: 50px;
       overflow: hidden;
       padding: 6px 0px;
       position: relative;
       text-decoration: none;
       text-overflow: ellipsis;
-      transition-duration: 85ms;
       color: var(--ds-link,#172b4d);
       width: 168px;
 
@@ -283,6 +283,7 @@
         background-color: #091e4214;
         border: none;
         box-shadow: none;
+        transition-duration: 85ms;
       }
 
       &:active {
@@ -402,6 +403,7 @@
     }
 
     &__button {
+      display: flex;
       align-items: center;
       background-color: #091e420a;
       border: none;
@@ -410,7 +412,6 @@
       box-sizing: border-box;
       color: #172b4d;
       cursor: pointer;
-      display: inline-flex;
       font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
       font-size: 14px;
       font-weight: 400;
@@ -418,12 +419,12 @@
       line-height: 20px;
       padding: 6px 12px;
       text-decoration: none;
-      transition-duration: 85ms;
 
       &:hover {
-        background-color: #091e4214;
+        background-color: #ff0000d5;
         border: none;
         box-shadow: none;
+        transition-duration: 0.5s;
       }
     }
 
@@ -480,22 +481,33 @@
     &__delete {
       background-color:rgba(255, 77, 0, 0.568);
       color: white;
-      float: right;
       font-size: 16px;
-      margin-top: 30px;
+      margin-left: 50px;
+      margin-top: 4px;
       margin-bottom: 20px;
+      margin-right: 0;
       cursor: pointer;
       padding: 8px;
       border-radius: 20px;
+      float: right;
 
       &:hover {
         background-color: #f60707;
         border: none;
         box-shadow: none;
+        transition-duration: 0.8s;
       }
     }
   }
 }
+
+
+.modal__buttons__section{
+  width: 80%;
+  display: block;
+  align-content: center;
+}
+
 
 
 @media (min-width: 699px) {
@@ -508,6 +520,10 @@
     font-weight: 400;
     line-height: 20px;
     overflow: hidden;
+  }
+
+  .modal__aside__button{
+    margin-left: 0;
   }
 
   .modal__header {
@@ -563,13 +579,18 @@
   .modal__section__delete {
     background-color:rgba(255, 77, 0, 0.568);
     color: white;
-    float: right;
     font-size: 16px;
-    margin-right: 40px;
-    margin-top: 30px;
+    margin-right: 0;
+    margin-top: 4px;
     margin-bottom: 20px;
     cursor: pointer;
     padding: 8px;
     border-radius: 20px;
+  }
+
+  .modal__buttons__section{
+    width: 80%;
+    float: left;
+    align-content: space-around;
   }
 }
