--- a/src/styles/pages/passwordChange.scss
+++ b/src/styles/pages/passwordChange.scss
@@ -30,7 +30,7 @@
   display: block;
   padding: 10px;
   height: auto;
-  max-height: 270px;
+  max-height: 400px;
   max-width: 350px;
   text-align: center;
   background-color: #ffffff;
@@ -153,7 +153,7 @@ li {
   .resetPassword__form {
     display: block;
     padding: 10px;
-    height: 270px;
+    height: 340px;
     max-width: 350px;
     text-align: center;
     background-color: #ffffff;
@@ -162,7 +162,7 @@ li {
     box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: 40px;
     margin-bottom: auto;
     justify-content: space-around;
     font-family: '-apple-system', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
